# packed_ds_graph_software_vis

./: .gitignore  README.md  pyproject.toml
examples/: __init__.py  demo_graph_features.py
examples/vis_modules/: grid_module.py  modules.py
src/packed_ds_graph_software_vis/core/: __init__.py  app_pyside.py  camera.py  color_utils.py  framebuffer.py  kernels.py  layout_engine.py  modules.py  renderer.py  scene.py
